syntax = "proto3";

package proto;

service BloodService {
  rpc AddBlood(AddBloodRequest) returns (AddBloodResponse) {
  }
  rpc GetBloods(GetBloodRequest) returns (GetBloodResponse) {
  }
  rpc GetBloodByID(GetBloodByIDRequest) returns (GetBloodByIDResponse) {
  }
}

message Blood {
  string id = 1;
  string name = 2;
  bool rhesus = 3;
  string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message AddBloodRequest {
  string name = 1;
  bool rhesus = 2;
  string description = 3;
}

message AddBloodResponse {
  Blood Blood = 1;
}

message GetBloodRequest {
}

message GetBloodResponse {
  repeated Blood Bloods = 1;
}

message GetBloodByIDRequest {
  string id = 1;
}

message GetBloodByIDResponse {
  Blood Blood = 1;
}
